Update Tic tac toe.html
added onclick attribute for cells;
added link for Js;

--- a/Tic tac toe.html
+++ b/Tic tac toe.html
@@ -7,21 +7,23 @@
 	<h1>Tic tac toe</h1>
 	<table border="1" cellpadding="50" cellspacing="1" bgcolor="#C0C0C0">
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td type="button" id="1" onclick="clickBox()"></td>
+			<td type="button" id="2" onclick="clickBox()"></td>
+			<td type="button" id="3" onclick="clickBox()"></td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td type="button" id="4" onclick="clickBox()"></td>
+			<td type="button" id="5" onclick="clickBox()"></td>
+			<td type="button" id="6" onclick="clickBox()"></td>
 		</tr>
 		<tr>
-			<td></td>
-			<td></td>
-			<td></td>
+			<td type="button" id="7" onclick="clickBox()"></td>
+			<td type="button" id="8" onclick="clickBox()"></td>
+			<td type="button" id="9" onclick="clickBox()"></td>
 		</tr>
 	</table>
+
+	<script src="Tic tac toe.Js"></script>
 
 </body>
 </html>
